<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HiiChat</string>
    <string name="login">LOGIN</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="go">Go</string>
    <string name="forgot_your_password">Forgot yout password ?</string>
    <string name="register">REGISTER</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="invalid_email_pass">Invalid email or not match password</string>
    <string name="invalid_email_or_pass">Invalid email or empty password"</string>
    <string name="login_false">Login False</string>
    <string name="invalid_email">Invalid email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Enter a new username</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="findFriend">Find Friend</string>
    <string name="notification">Friend Request</string>
    <string name="friend">Friend</string>
    <string name="group">Group</string>
    <string name="inFo">Information</string>
    <string name="check_internet">Ứng dụng chưa được kết nốt với Internet, vui lòng kiểm tra kết nối và quay lại. Xin cảm ơn !!!</string>
    <string name="msg_subscribed">Subscribed</string>
    <string name="msg_subscribe_failed">Subscribe failed</string>
    <string name="msg_un_subscribed">Un subscribed</string>
    <string name="msg_un_subscribe_failed">Un subscribe failed</string>
</resources>
